# PiTV

./: .gitignore  Notes.txt
PiTVDesktopViewer/: CMakeLists.txt  CMakeUserPresets.json
PiTVDesktopViewer/PiTVDesktopViewer/: CMakeLists.txt  EditServerDialog.cpp  EditServerDialog.h  EditServerDialog.ui  PiTVDesktopViewer.cpp  PiTVDesktopViewer.h  PiTVDesktopViewer.ui  Pipeline.cpp  Pipeline.h  PlatformEncryption.cpp  PlatformEncryption.h  ServerConfig.h  ServerConfigStorage.cpp  ServerConfigStorage.h  ServerStatusMessage.h  main.cpp  resources.qrc
PiTvAndroidViewer/: .gitignore  settings.gradle
PiTvAndroidViewer/app/: build.gradle
PiTvAndroidViewer/app/src/androidTest/java/com/dmitriymi/pitvandroidviewer/: ExampleInstrumentedTest.java
PiTvAndroidViewer/app/src/main/: AndroidManifest.xml
PiTvAndroidViewer/app/src/main/java/com/dmitriymi/pitvandroidviewer/: CameraViewActivity.java  GStreamerSurfaceView.java  HttpClientSingleton.java  NetworkUtils.java  ServerConfig.java
PiTvAndroidViewer/app/src/main/jni/: Android.mk  rtp_pipeline.cpp
PiTvAndroidViewer/app/src/main/res/layout/: activity_main.xml
PiTvAndroidViewer/app/src/main/res/values/: strings.xml  themes.xml
PiTvAndroidViewer/app/src/main/res/values-night/: themes.xml
PiTvAndroidViewer/app/src/test/java/com/dmitriymi/pitvandroidviewer/: ExampleUnitTest.java
PiTvAndroidViewer/gradle/wrapper/: gradle-wrapper.properties
PiTvServer/: CMakeLists.txt  CMakePresets.json
PiTvServer/PiTvServer/: CMakeLists.txt  PiTvMain.cpp  PiTvServer.cpp  PiTvServer.h  SystemStats.h  base64.hpp  example.conf.in  pitv-server.service.in  prepare-build-ubuntu.sh
PiTvServer/PiTvServer/accounts/: UserDb.cpp  UserDb.h  UserDbCsv.cpp  UserDbCsv.h
PiTvServer/PiTvServer/src/: PiTvMain.cpp  PiTvServer.cpp  PiTvServer.h  SystemStats.h
PiTvServer/PiTvServer/src/accounts/: UserDb.h
PiTvServer/PiTvServer/src/video/: Pipeline.cpp  Pipeline.h
PiTvServer/PiTvServer/video/: Pipeline.cpp  Pipeline.h
